Fixed StartupChecks doesn't show java version. Use readAllBytes() from input stream Added icon in FileChooser Backpage changes