@@ -4,6 +4,7 @@ import com.github.manolo8.darkbot.Main;
 import com.github.manolo8.darkbot.extensions.util.Version;
 import com.github.manolo8.darkbot.gui.utils.Popups;
 import com.github.manolo8.darkbot.utils.FileUtils;
+import com.github.manolo8.darkbot.utils.I18n;
 import com.github.manolo8.darkbot.utils.OSUtil;
 import com.github.manolo8.darkbot.utils.Time;
 import com.github.manolo8.darkbot.utils.http.Http;
@@ -13,7 +14,10 @@ import com.google.gson.annotations.SerializedName;
 import eu.darkbot.util.Timer;
 import org.jetbrains.annotations.Nullable;
 
-import javax.swing.*;
+import javax.swing.JButton;
+import javax.swing.JOptionPane;
+import javax.swing.JProgressBar;
+import javax.swing.SwingUtilities;
 import java.io.BufferedInputStream;
 import java.io.BufferedOutputStream;
 import java.io.File;
@@ -21,7 +25,6 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URL;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Comparator;
@@ -37,7 +40,7 @@ public class BackpageTask extends Thread {
     private static final String EXECUTABLE_NAME = "dark_backpage";
     private static final String RELEASE_URL = "https://api.github.com/repos/darkbot-reloaded/DarkBackpage/releases/latest";
 
-    private static final Timer VERSION_CHECK_TIMER = Timer.get(Time.HOUR * 6);
+    private static final Timer VERSION_CHECK_TIMER = Timer.get(Time.HOUR * 12);
 
     private final Main main;
     private final BackpageButton button;
@@ -51,35 +54,45 @@ public class BackpageTask extends Thread {
     @Override
     public void run() {
         if (main.backpage.isInstanceValid()) { // open backpage even if sid is KO
-                try {
-                    if (checkIfCanRun()) {
-                        new ProcessBuilder(BACKPAGE_PATH.resolve(EXECUTABLE_NAME).toAbsolutePath().toString(),
-                                "--sid", main.backpage.getSid(),
-                                "--url", main.backpage.getInstanceURI().toString())
-                                .start().waitFor();
-                    }
-                } catch (IOException e) {
-                    e.printStackTrace();
-                    Popups.of("Backpage error", e.toString())
-                            .messageType(JOptionPane.ERROR_MESSAGE)
-                            .showAsync();
-                } catch (InterruptedException e) {
-                    e.printStackTrace();
+            try {
+                if (canRun()) {
+                    new ProcessBuilder(BACKPAGE_PATH.resolve(EXECUTABLE_NAME).toAbsolutePath().toString(),
+                            "--sid", main.backpage.getSid(),
+                            "--url", main.backpage.getInstanceURI().toString())
+                            .start().waitFor();
                 }
+            } catch (InterruptedException | IOException e) {
+                e.printStackTrace();
+            }
         } // inform user that instance/sid is not valid?
-
         SwingUtilities.invokeLater(() -> button.setEnabled(true));
     }
 
-    private boolean checkIfCanRun() throws IOException {
-        Version currentVersion = readVersionFile();
+    private boolean canRun() {
+        try {
+            Version currentVersion = readVersionFile();
 
-        // have downloaded backpage and version was checked recently
-        return (currentVersion != null && VERSION_CHECK_TIMER.isActive())
-                || checkVersion(currentVersion);
+            // have downloaded backpage and version was checked recently
+            return (currentVersion != null && VERSION_CHECK_TIMER.isActive())
+                    || checkVersion(currentVersion);
+        } catch (IOException e) {
+            e.printStackTrace();
+            VERSION_CHECK_TIMER.disarm(); // IOException happen - reset timer
+
+            String message = e instanceof DirectoryClearException ? ((DirectoryClearException) e).getPopupMessage() : e.toString();
+            Popups.of("Backpage exception", message)
+                    .messageType(JOptionPane.ERROR_MESSAGE)
+                    .showAsync();
+        } finally {
+            button.removeProgressBar();
+        }
+
+        return false;
     }
 
     private boolean checkVersion(Version current) throws IOException {
+        JProgressBar progressBar = button.createProgressBar();
+
         ReleaseInfo releaseInfo = ReleaseInfo.get();
         if (releaseInfo == null) return false;
 
@@ -87,35 +100,35 @@ public class BackpageTask extends Thread {
         ReleaseInfo.Asset asset = releaseInfo.getValidAsset();
         if (remoteVersion == null || asset == null) return false;
 
+        VERSION_CHECK_TIMER.activate(); // activate the timer here - version will be successfully checked
         return current != null && current.compareTo(remoteVersion) >= 0
-                || askUserToDownload(current, remoteVersion, asset);
+                || askUserToDownload(progressBar, current, remoteVersion, asset);
     }
 
     //return true if is possible to run a backpage
-    private boolean askUserToDownload(Version current, Version remote, ReleaseInfo.Asset asset) throws IOException {
-        String message = current == null ? "To use backpage browser, first need to download binaries!"
-                : "New version of backpage browser is available!";
-        message += "\nVersion: " + (current != null ? current + " -> " : "") + remote + ", size: " + (asset.size >> 20) + "MB";
+    private boolean askUserToDownload(JProgressBar progressBar,
+                                      Version current, Version remote, ReleaseInfo.Asset asset) throws IOException {
+        String message = current == null ? I18n.get("gui.backpage_button.download_message")
+                : I18n.get("gui.backpage_button.new_version_message");
+        message += "\n -Ver: " + (current != null ? current + " -> " : "") + remote + ", size: " + (asset.size >> 20) + "MB";
 
-        JButton download = new JButton("Download");
+        JButton download = new JButton(I18n.get("gui.backpage_button.download"));
         Popups.Builder builder = Popups.of("Backpage browser", message)
-                .messageType(JOptionPane.INFORMATION_MESSAGE)
-                .options(download, "Cancel");
+                .messageType(JOptionPane.QUESTION_MESSAGE)
+                .options(download, I18n.get("gui.backpage_button.cancel"));
 
         JOptionPane optionPane = builder.build();
         download.addActionListener(l -> optionPane.setValue(download));
 
         if (download == builder.showSync()) {
-            if (clearDirectory()) {
-                FileUtils.createDirectories(BACKPAGE_PATH);
+            if (!clearDirectory())
+                throw new DirectoryClearException(BACKPAGE_PATH);
 
-                if (downloadBackpage(asset))
-                    writeVersionFile(remote); // write version file only if everything was downloaded
-            } else throw new IOException("Unable to clear backpage directory.\n" +
-                    " -Make sure to close every backpage window!\n -" + BACKPAGE_PATH);
+            FileUtils.createDirectories(BACKPAGE_PATH);
+            downloadBackpage(progressBar, asset);
+            writeVersionFile(remote);
         }
 
-        VERSION_CHECK_TIMER.activate(); // activate on cancel or successful download
         return readVersionFile() != null;
     }
 
@@ -141,10 +154,12 @@ public class BackpageTask extends Thread {
     }
 
     // true if everything downloaded successfully
-    private boolean downloadBackpage(ReleaseInfo.Asset asset) {
-        JProgressBar progressBar = button.createProgressBar(asset.size);
+    private void downloadBackpage(JProgressBar progressBar, ReleaseInfo.Asset asset) throws IOException {
+        SwingUtilities.invokeLater(() -> {
+            progressBar.setIndeterminate(false);
+            progressBar.setMaximum(asset.size);
+        });
 
-        boolean result = false;
         try (ZipInputStream zis = new ZipInputStream(new BufferedInputStream(asset.openStream()))) {
             int downloadedBytes = 0;
             for (ZipEntry entry = zis.getNextEntry(); entry != null; entry = zis.getNextEntry()) {
@@ -169,21 +184,11 @@ public class BackpageTask extends Thread {
                     }
                 }
             }
-
-            result = true;
-        } catch (IOException e) {
-            e.printStackTrace();
         }
-
-        button.removeProgressBar();
-        return result;
     }
 
     private void setProgress(JProgressBar progressBar, int progress) {
-        SwingUtilities.invokeLater(() -> {
-            progressBar.setValue(progress);
-            progressBar.revalidate();
-        });
+        SwingUtilities.invokeLater(() -> progressBar.setValue(progress));
     }
 
     private @Nullable Version readVersionFile() throws IOException {
@@ -192,7 +197,7 @@ public class BackpageTask extends Thread {
     }
 
     private void writeVersionFile(Version version) throws IOException {
-        Files.write(VERSION_PATH, version.toString().getBytes(StandardCharsets.UTF_8));
+        Files.writeString(VERSION_PATH, version.toString());
     }
 
     public static class ReleaseInfo {
@@ -240,6 +245,20 @@ public class BackpageTask extends Thread {
 
                 return false;
             }
+        }
+    }
+
+    private static class DirectoryClearException extends IOException {
+        private final String popupMessage;
+
+        public DirectoryClearException(Path path) {
+            super("Failed to clear directory: " + path.toString());
+            this.popupMessage = "Failed to clear backpage directory.\n" +
+                    " -Make sure to close every backpage window!\n -" + path;
+        }
+
+        public String getPopupMessage() {
+            return popupMessage;
         }
     }
 }
